# ARC-AGI-3-Agents

./: README.md  main.py  pyproject.toml
agents/: __init__.py  recorder.py  swarm.py
agents/templates/: reasoning_agent.py  smolagents.py
agents/templates/langgraph_thinking/: schema.py
src/agents/: __init__.py  __main__.py  agent.py  tracing.py
src/agents/templates/: llm_agents.py  multimodal.py
tests/: conftest.py
tests/unit/: test_core.py  test_recorder.py  test_swarm.py
